@@ -1,17 +1,18 @@
 package com.example.secret_store.security.filter;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
+import com.auth0.jwt.interfaces.DecodedJWT;
 import com.example.secret_store.security.Constants;
-
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -29,11 +30,13 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
       return;
     }
     String token = header.replace(Constants.BEARER, "");
-    String user = JWT.require(Algorithm.HMAC512(Constants.SECRET_KEY))
-    .build()
-    .verify(token)
-    .getSubject();
-    Authentication authentication = new UsernamePasswordAuthenticationToken(user, null, Arrays.asList());
+    DecodedJWT decodedJWT = JWT.require(Algorithm.HMAC512(Constants.SECRET_KEY))
+        .build()
+        .verify(token);
+    String username = decodedJWT.getSubject().toString();
+    String role = decodedJWT.getClaim("role").asString();
+    Authentication authentication = new UsernamePasswordAuthenticationToken(username, null,
+        List.of(new SimpleGrantedAuthority("ROLE_" + role)));
     SecurityContextHolder.getContext().setAuthentication(authentication);
 
     filterChain.doFilter(request, response);
